[package]
name = "kwrap"
version = "0.1.2"
edition = "2021"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
description = "Kwrap’s command line client"
homepage = "https://kwrap.app"
repository = "https://github.com/kwrap/kwrap-cli.git"
readme = "README.md"
keywords = ["password", "password-manager", "kwrap", "cli"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.package.ring]
opt-level = 3

[dependencies]
ace = "0.2.0"
home-config = { version = "0.4.0", features = ["json"] }
dialoguer = "0.10.1"
ring = "0.16.20"
hex = "0.4.3"
base64 = "0.13.0"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "rustls-tls", "rustls-tls-native-roots", "brotli", "json"]}
tui = { version = "0.18.0", default-features = false, features = ["crossterm"] }
crossterm = "0.24.0"
arboard = { version = "2.1.1", default-features = false }
time = "=0.2.22"
time-humanize = "0.1.3"
totp-rs = { version = "1.4.0", features = ["otpauth"] }
zeroize = { version = "1.5.6", features = ["zeroize_derive"] }